--- a/style.css
+++ b/style.css
@@ -37,6 +37,21 @@ body {
     Arial, sans-serif;
 }
 
+::-webkit-scrollbar {
+  width: 3px;
+  height: 3px;
+  transition: all 500ms;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(180, 180, 180);
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(150, 150, 150);
+}
+
 img {
   display: block;
   max-width: 100%;
